@@ -1,3 +1,4 @@
+* Use the shipment assign wizard for production
 * Rename production state from cancel to cancelled
 
 Version 5.6.0 - 2020-05-04
